--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -271,7 +271,7 @@
   line-height: 1;
 
   &.btn-sm {
-    padding: v.$spacing-5 v.$spacing-4;
+    padding: v.$spacing-2 v.$spacing-4;
     font-size: v.$font-size-sm;
     height: 32px;
   }
