--- a/src/styles/pages/_catalog.scss
+++ b/src/styles/pages/_catalog.scss
@@ -426,7 +426,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      z-index: 1000;
+      z-index: v.$z-modal;
       pointer-events: none;
       // Скидаємо десктопні стилі
       max-height: none;
